MPL/test/MplPasses/TypeChecker/cases/kindcheck/negativehigherkindedtype/3.mpl
data Nat(A) -> S =
    Succ :: S,A(A) -> S
    Zero ::   -> S

fun myfun :: Nat(A) -> Nat(A) =
    Succ(a), Succ(b) -> a
